--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react": "^16.4.0",
     "react-bootstrap": "^1.2.1",
     "react-dom": "^16.4.0",
-    "react-redux": "^7.2.0",
+    "react-redux": "6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
