--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "bootstrap": "^4.5.0",
     "format-number": "^3.0.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.0",
+    "react": "16.8.4",
     "react-bootstrap": "^1.2.1",
-    "react-dom": "^16.4.0",
+    "react-dom": "16.8.4",
     "react-redux": "6.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "1.1.4",
